test/semantic_errors/invalid_assignment8.mc
void main() {
    int i;
    bool b;
    i = b;
}